# parqx

./: .gitattributes  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/parq/: __init__.py  __main__.py  cli.py  logger.py
src/parq/tui/: __init__.py  app.py
src/parq/tui/widgets/: __init__.py  arrow_table.py
src/parqx/: __init__.py  __main__.py  cli.py  logger.py
src/parqx/tui/: __init__.py  app.py
src/parqx/tui/widgets/: __init__.py  arrow_table.py  file_loading.py
tests/: __init__.py  conftest.py  smoke_test.py  test_cli.py  test_smoke.py
